--- a/app/views/yelpers/new.html.erb
+++ b/app/views/yelpers/new.html.erb
@@ -5,7 +5,10 @@
         <%= image_tag "yelp-logo.png" %>
         <h3 class="text-muted">Project Yelfie</h3>
           <p>
-            Ever wanted to see your Yelp reviews in a Pinterest-like format? Now you can with Yelfie -- a Yelp Selfie!
+            Ever wanted to see your Yelp reviews in a Pinterest-like format? Now you can with Yelfie -- a Yelp Selfie! Yelfie automatically grabs the 100 most recent reviews and photos from your Yelp Profile and generates a cool, visual grid that you can scroll through. Try it below by copying and pasting your Yelp Profile URL!
+          </p>
+          <p>
+            <strong>Example Yelp Profile URL:</strong> http://www.yelp.com/user_details?userid=sraTrYU-7q_bQ0TxQrLJvQ
           </p>
       </div>
 
@@ -13,7 +16,7 @@
             <fieldset>
               <%= f.input :yelp_profile_url, label: "Enter Yelp Profile URL" %>
               <%#= f.input :yelp_user_id, label: "Enter Yelp Profile URL", required: false %>
-              <%= f.button :submit, value: "Go", class: "btn-danger", data: {"loading-text" => "Generating Yelfie, please wait..."} %>
+              <%= f.button :submit, value: "Go", class: "btn-danger", data: {"loading-text" => raw("Generating Yelfie, please wait...")} %>
             </fieldset>
         <% end %>
   </div>
