add disclaimer to home page

--- a/app/views/yelpers/new.html.erb
+++ b/app/views/yelpers/new.html.erb
@@ -3,7 +3,7 @@
   <div class="get_started">
       <div class="header">
         <%= image_tag "yelp-logo.png" %>
-        <h3 class="text-muted">Project Yelfie</h3>
+        <h3 class="text-muted">Project Yelfie*</h3>
           <p>
             Ever wanted to see your Yelp reviews in a Pinterest-like format? Now you can with Yelfie -- a Yelp Selfie! Yelfie automatically grabs the 100 most recent reviews and photos from your Yelp Profile and generates a cool, visual grid that you can scroll through. Try it below by copying and pasting your Yelp Profile URL!
           </p>
@@ -20,5 +20,9 @@
             </fieldset>
         <% end %>
   </div>
+
+  <footer>
+    *This project is not affiliated with Yelp.
+  </footer>
 
 </div> <!-- /container -->
