--- a/app/views/yelpers/new.html.erb
+++ b/app/views/yelpers/new.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag "yelp-logo.png" %>
         <h3 class="text-muted">Project Yelfie*</h3>
           <p>
-            Ever wanted to see your Yelp reviews in a Pinterest-like format? Now you can with Yelfie -- a Yelp Selfie! Yelfie automatically grabs the 100 most recent reviews and photos from your Yelp Profile and generates a cool, visual grid that you can scroll through. Try it below by copying and pasting your Yelp Profile URL!
+            Ever wanted to see your Yelp reviews in a Pinterest-like format? Now you can with Yelfie -- a Yelp Selfie! Yelfie automatically grabs the most recent reviews and photos from a Yelp Profile and generates a cool, visual grid that you can scroll through. Try it below by copying and pasting your Yelp Profile URL!
           </p>
           <p>
             <strong>Example Yelp Profile URL:</strong> http://www.yelp.com/user_details?userid=sraTrYU-7q_bQ0TxQrLJvQ
